Added return response for when jwt is expired. Moved markup logic to course service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,23 @@
 info.application.name=School Course Database System
 info.application.description=Application for school administrators to create a courses database
 info.applcaiton.version=0.0.1
+
 # Details for our datasource
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/schoolAdmin
 spring.datasource.username=postgres
 spring.datasource.password=password
+
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.security.user.roles=ADMIN
+
+# JWT
+spring.app.jwtSecret=JWTSuperSecretKey
+spring.app.jwtExpirationInMs=604800000
+
 # Setting logging level
 logging.level.phan.java.recipesite=DEBUG
