--- a/src/main/resources/auth.properties
+++ b/src/main/resources/auth.properties
@@ -1,3 +1,6 @@
-spring.app.jwtSecret=${JWT_SECRET}
-spring.app.jwtExpirationInMs=${JWT_EXPIRATION}
+#spring.app.jwtSecret=${JWT_SECRET}
+#spring.app.jwtExpirationInMs=${JWT_EXPIRATION}
 
+# JWT
+spring.app.jwtSecret=JWTSuperSecretKey
+spring.app.jwtExpirationInMs=604800000
