Removed hardcoded environment variable values.

--- a/src/main/resources/auth.properties
+++ b/src/main/resources/auth.properties
@@ -1,6 +1,3 @@
-#spring.app.jwtSecret=${JWT_SECRET}
-#spring.app.jwtExpirationInMs=${JWT_EXPIRATION}
+spring.app.jwtSecret=${JWT_SECRET}
+spring.app.jwtExpirationInMs=${JWT_EXPIRATION}
 
-# JWT
-spring.app.jwtSecret=JWTSuperSecretKey
-spring.app.jwtExpirationInMs=604800000
